--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   dropdown_button2: ^2.3.9
+  background_locator_2: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
