--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: ^0.13.3
   dropdown_button2: ^2.3.9
   background_locator_2: ^2.0.6
-
+  location_permissions: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
